@@ -56,7 +56,7 @@ display_manager::display_manager(display* d)
 	set_turbo_speed(turbo_speed());
 	set_fullscreen(fullscreen());
 	set_gamma(gamma());
-	set_colour_cursors(preferences::get("colour_cursors") == "yes");
+	set_colour_cursors(utils::string_bool(preferences::get("colour_cursors")));
 }
 
 display_manager::~display_manager()
@@ -83,7 +83,7 @@ void set_fullscreen(bool ison)
 				gui::message_dialog(*disp,"",_("The video mode could not be changed. Your window manager must be set to 16 bits per pixel to run the game in windowed mode. Your display must support 1024x768x16 to run the game full screen.")).show();
 			}
 			// We reinit color cursors, because SDL on Mac seems to forget the SDL_Cursor
-			set_colour_cursors(preferences::get("colour_cursors") == "yes");
+			set_colour_cursors(utils::string_bool(preferences::get("colour_cursors")));
 		}
 	}
 }
